# backend-migrations

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: action.yml
database/: alembic.ini  env.py  settings.py
database/alembic/: env.py
database/connection/: session.py
database/migrator/: env.py
database/migrator/versions/: 2022-11-13-e6f9b2c2986e_.py
database/models/: __init__.py  booked.py  channels.py  credentials.py  event.py  events.py  favourites.py  likes.py  participations.py  subscribed.py  unions.py  users.py
database/versions/: 2023-01-13-2e1914b486bd_.py  2023-01-14-28b2af9e8819_.py  2023-01-14-4478c045b868_.py  2023-01-14-c494274d446e_.py  2023-01-14-ecab8a22dca0_.py  2023-01-15-73a0a62a3583_.py  2023-01-18-28abbf03eaee_.py  2023-01-18-d306c3bde1db_.py  2023-01-19-5a844842cc3b_.py  2023-01-19-6e0c726108f6_.py  2023-01-19-db85eb23bf88_.py  2023-01-19-ed0b3c8f1336_.py  2023-01-19-ef1ad45732fa_.py  2023-01-21-01f452b544ab_.py  2023-01-21-615651da3942_.py  2023-01-21-63f9005b99d6_.py  2023-01-21-eb99eaff62b3_.py  2023-01-24-193dc7674ad6_.py  2023-01-25-918ff0a16a29_.py  2023-01-26-86d1e82afb57_.py  2023-01-26-e0eb44523cb3_.py  2023-01-28-9a368348329f_.py  2023-02-04-af9cac1f0709_.py
